salesforce/force-app/main/default/objects/Ride__c/Ride__c.object-meta.xml
<CustomObject>
  <label>Ride</label>
  <pluralLabel>Rides</pluralLabel>
  <nameField>
    <label>Ride Name</label>
    <type>Text</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>