salesforce/force-app/main/default/objects/Ride__c/fields/AcceptedCount__c.field-meta.xml
<CustomField>
  <fullName>AcceptedCount__c</fullName>
  <label>Accepted Riders</label>
  <type>Number</type>
  <precision>3</precision>
  <scale>0</scale>
  <defaultValue>0</defaultValue>
</CustomField>