salesforce/force-app/main/default/objects/Ride__c/fields/BaseFare__c.field-meta.xml
<CustomField>
  <fullName>BaseFare__c</fullName>
  <label>Base Fare</label>
  <type>Currency</type>
  <precision>10</precision>
  <scale>2</scale>
  <defaultValue>20</defaultValue>
</CustomField>