salesforce/force-app/main/default/objects/Ride__c/fields/CancelReason__c.field-meta.xml
<CustomField>
  <fullName>CancelReason__c</fullName>
  <label>Cancel Reason</label>
  <type>Text</type>
  <length>255</length>
</CustomField>