salesforce/force-app/main/default/objects/Ride__c/fields/Capacity__c.field-meta.xml
<CustomField>
  <fullName>Capacity__c</fullName>
  <label>Capacity</label>
  <type>Number</type>
  <precision>2</precision>
  <scale>0</scale>
  <defaultValue>3</defaultValue>
</CustomField>