salesforce/force-app/main/default/objects/Ride__c/fields/CO2SavedKg__c.field-meta.xml
<CustomField>
  <fullName>CO2SavedKg__c</fullName>
  <label>CO2 Saved (kg)</label>
  <type>Number</type>
  <precision>6</precision>
  <scale>2</scale>
</CustomField>