salesforce/force-app/main/default/objects/Ride__c/fields/DepartureTime__c.field-meta.xml
<CustomField>
  <fullName>DepartureTime__c</fullName>
  <label>Departure Time</label>
  <type>DateTime</type>
</CustomField>