salesforce/force-app/main/default/objects/Ride__c/fields/DistanceKm__c.field-meta.xml
<CustomField>
  <fullName>DistanceKm__c</fullName>
  <label>Distance (km)</label>
  <type>Number</type>
  <precision>6</precision>
  <scale>1</scale>
</CustomField>