salesforce/force-app/main/default/objects/Ride__c/fields/Driver__c.field-meta.xml
<CustomField>
  <fullName>Driver__c</fullName>
  <label>Driver</label>
  <type>Lookup</type>
  <referenceTo>AppUser__c</referenceTo>
  <relationshipLabel>Rides</relationshipLabel>
  <relationshipName>Rides</relationshipName>
  <deleteConstraint>Restrict</deleteConstraint>
  <required>true</required>
</CustomField>