salesforce/force-app/main/default/objects/Ride__c/fields/EndLat__c.field-meta.xml
<CustomField>
  <fullName>EndLat__c</fullName>
  <label>End Lat</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>6</scale>
</CustomField>