salesforce/force-app/main/default/objects/Ride__c/fields/EndLng__c.field-meta.xml
<CustomField>
  <fullName>EndLng__c</fullName>
  <label>End Lng</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>6</scale>
</CustomField>