salesforce/force-app/main/default/objects/Ride__c/fields/EndText__c.field-meta.xml
<CustomField>
  <fullName>EndText__c</fullName>
  <label>End</label>
  <type>Text</type>
  <length>255</length>
</CustomField>