salesforce/force-app/main/default/objects/Ride__c/fields/ExternalRideId__c.field-meta.xml
<CustomField>
  <fullName>ExternalRideId__c</fullName>
  <label>External Ride Id</label>
  <type>Text</type>
  <length>80</length>
  <externalId>true</externalId>
  <unique>true</unique>
  <required>true</required>
</CustomField>