salesforce/force-app/main/default/objects/Ride__c/fields/IsTemplate__c.field-meta.xml
<CustomField>
  <fullName>IsTemplate__c</fullName>
  <label>Is Template</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
  <description>Marks a ride as a recurring template (demo).</description>
</CustomField>