salesforce/force-app/main/default/objects/Ride__c/fields/ParentRide__c.field-meta.xml
<CustomField>
  <fullName>ParentRide__c</fullName>
  <label>Parent Ride</label>
  <type>Lookup</type>
  <referenceTo>Ride__c</referenceTo>
  <relationshipLabel>Child Rides</relationshipLabel>
  <relationshipName>ChildRides</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
  <description>Instance rides generated from a recurring template.</description>
</CustomField>