salesforce/force-app/main/default/objects/Ride__c/fields/PerRiderFare__c.field-meta.xml
<CustomField>
  <fullName>PerRiderFare__c</fullName>
  <label>Per Rider Fare</label>
  <type>Currency</type>
  <precision>10</precision>
  <scale>2</scale>
  <formula>IF(AcceptedCount__c &gt;= 1, ROUND(SuggestedFare__c / (AcceptedCount__c + 1), 0), ROUND(SuggestedFare__c, 0))</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>