salesforce/force-app/main/default/objects/Ride__c/fields/RatePerKm__c.field-meta.xml
<CustomField>
  <fullName>RatePerKm__c</fullName>
  <label>Rate Per Km</label>
  <type>Currency</type>
  <precision>10</precision>
  <scale>2</scale>
  <defaultValue>6</defaultValue>
</CustomField>