salesforce/force-app/main/default/objects/Ride__c/fields/StartLat__c.field-meta.xml
<CustomField>
  <fullName>StartLat__c</fullName>
  <label>Start Lat</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>6</scale>
</CustomField>