salesforce/force-app/main/default/objects/Ride__c/fields/StartLng__c.field-meta.xml
<CustomField>
  <fullName>StartLng__c</fullName>
  <label>Start Lng</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>6</scale>
</CustomField>