salesforce/force-app/main/default/objects/Ride__c/fields/StartText__c.field-meta.xml
<CustomField>
  <fullName>StartText__c</fullName>
  <label>Start</label>
  <type>Text</type>
  <length>255</length>
</CustomField>