salesforce/force-app/main/default/objects/Ride__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Open</fullName><default>true</default><label>Open</label></value>
      <value><fullName>Full</fullName><default>false</default><label>Full</label></value>
      <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
      <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
      <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>