salesforce/force-app/main/default/objects/Ride__c/fields/SuggestedFare__c.field-meta.xml
<CustomField>
  <fullName>SuggestedFare__c</fullName>
  <label>Suggested Fare</label>
  <type>Currency</type>
  <precision>10</precision>
  <scale>2</scale>
  <formula>ROUND((BaseFare__c + (DistanceKm__c * RatePerKm__c)) * SurgeMultiplier__c, 0)</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>