salesforce/force-app/main/default/objects/Ride__c/fields/SurgeMultiplier__c.field-meta.xml
<CustomField>
  <fullName>SurgeMultiplier__c</fullName>
  <label>Surge Multiplier</label>
  <type>Number</type>
  <precision>4</precision>
  <scale>2</scale>
  <defaultValue>1</defaultValue>
</CustomField>