salesforce/force-app/main/default/objects/Ride__c/fields/VehicleType__c.field-meta.xml
<CustomField>
  <fullName>VehicleType__c</fullName>
  <label>Vehicle Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>PetrolCar</fullName><default>true</default><label>Petrol car</label></value>
      <value><fullName>DieselCar</fullName><default>false</default><label>Diesel car</label></value>
      <value><fullName>CNGCar</fullName><default>false</default><label>CNG car</label></value>
      <value><fullName>TwoWheeler</fullName><default>false</default><label>Two-wheeler</label></value>
      <value><fullName>EV</fullName><default>false</default><label>EV</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>